--- a/pafer-adult.ipynb
+++ b/pafer-adult.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "0c984b76",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "932aeefd",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "6843f511",
    "metadata": {
     "tags": []
@@ -370,7 +370,7 @@
        "[16281 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "d999b307",
    "metadata": {
     "tags": []
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "809d7da0",
    "metadata": {
     "tags": []
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "27c616fe",
    "metadata": {
     "tags": []
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "041cb2f3",
    "metadata": {
     "tags": []
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "95fc68b8",
    "metadata": {
     "tags": []
@@ -465,7 +465,7 @@
        "Name: race, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "136ddf88",
    "metadata": {
     "tags": []
@@ -496,7 +496,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "6fa4a793",
    "metadata": {
     "tags": []
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "bebd15c0",
    "metadata": {
     "tags": []
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "e5602b09",
    "metadata": {
     "tags": []
@@ -590,7 +590,7 @@
        "                       random_state=42)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "5b1f818a",
    "metadata": {
     "tags": []
@@ -620,10 +620,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11af8ced0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x10ee4c9d0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "5600dbff",
    "metadata": {
     "tags": []
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "f2c86e63",
    "metadata": {
     "tags": []
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "2f35ff71",
    "metadata": {
     "tags": []
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "3aee344f-326e-43fa-a97b-83fb98b9afee",
    "metadata": {
     "tags": []
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "0761cbd8-febd-4169-a2a4-5db31eea85da",
    "metadata": {
     "tags": []
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "a31ed0e7",
    "metadata": {
     "tags": []
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "cf32b9a5",
    "metadata": {
     "tags": []
@@ -872,7 +872,7 @@
        " 8: \"(adult_test_cat_X['marital-status_Married-civ-spouse']> 0.5 & adult_test_cat_X['education-num']> 12.5  )\"}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "591881c1-815a-499c-bd1e-c7fd6476c1b5",
    "metadata": {
     "tags": []
@@ -910,7 +910,7 @@
        " \"(adult_test_cat_X['marital-status_Married-civ-spouse']> 0.5 & adult_test_cat_X['education-num']> 12.5  )\"]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "f3fc7c6e",
    "metadata": {
     "tags": []
@@ -951,10 +951,10 @@
     {
      "data": {
       "text/plain": [
-       "88.65102701835914"
+       "89.28730902452004"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "e2ee1554",
    "metadata": {
     "tags": []
@@ -1041,10 +1041,10 @@
     "        \"\"\"\n",
     "    accept_rates = []\n",
     "    \n",
-    "    for sens_attr in sens_dataset.value_counts().keys():\n",
+    "    for sens_attr in sorted(sens_dataset.unique()):\n",
     "        accept_rates.append(np.sum((sens_dataset == sens_attr) & y_pred) / np.sum(sens_dataset == sens_attr))\n",
     "        \n",
-    "    return min(accept_rates) / max(accept_rates)\n",
+    "    return accept_rates[0] / accept_rates[1]\n",
     "\n",
     "\n",
     "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=False):\n",
@@ -1086,7 +1086,7 @@
     "    for rule in pos_ruleset:\n",
     "        # for each rule we find the distribution of sensitive attributes\n",
     "        rule_counts = np.zeros(len(S))\n",
-    "        rule_total = len(sens_dataset[pd.eval(rule, engine='python')])\n",
+    "        rule_total = len(sens_dataset[pd.eval(rule)])\n",
     "        \n",
     "        if histogram:\n",
     "            for i, s_i in enumerate(S):\n",
@@ -1104,8 +1104,18 @@
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
     "    \n",
-    "    # calculate and return sp, avoid div by 0 error by omitting those \n",
-    "    return np.min(poscounts_per_si[total_per_si != 0] / total_per_si[total_per_si != 0]) / np.max(poscounts_per_si[total_per_si != 0] / total_per_si[total_per_si != 0])\n"
+    "    if not np.any(total_per_si[total_per_si != 0]):\n",
+    "        print(f\"Totals for epsilon: {epsilon} has no correct values ({total_per_si})\")\n",
+    "        \n",
+    "    if np.any(total_per_si < 0):\n",
+    "        print(f\"Negative numbers in total_per_si: {total_per_si}\")\n",
+    "        \n",
+    "    # replace the total count with the number of positives (total >= pos) if it is 0\n",
+    "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]    \n",
+    "    \n",
+    "    # calculate and return sp\n",
+    "    return (poscounts_per_si[0] / total_per_si[0]) / (poscounts_per_si[1] / total_per_si[1])\n",
+    "\n"
    ]
   },
   {
@@ -1118,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "3a26e0b1",
    "metadata": {
     "tags": []
@@ -1150,7 +1160,7 @@
     "        \n",
     "    actual_sp = statistical_parity(tree.predict(dataset), sens_dataset)\n",
     "    errors = np.zeros((runs, len(mechanisms)))\n",
-    "    S = sens_dataset.value_counts(sort=False).index\n",
+    "    S = sorted(sens_dataset.unique())\n",
     "    \n",
     "    for row in range(runs):\n",
     "        for col, mechanism in enumerate(mechanisms):\n",
@@ -1161,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "61d990ee-b03c-4102-a6cd-097993951333",
    "metadata": {
     "tags": []
@@ -1170,11 +1180,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[7.10497653e-03, 4.48183350e-01, 9.97111708e-02],\n",
-       "       [1.79788255e-02, 8.81081724e+00, 3.17336900e-01]])"
+       "array([[0.03785978, 0.6717958 , 2.75659591],\n",
+       "       [0.02389216, 4.52617273, 0.03514768]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
