--- a/pafer-adult.ipynb
+++ b/pafer-adult.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "0c984b76",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "932aeefd",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6843f511",
    "metadata": {
     "tags": []
@@ -370,7 +370,7 @@
        "[16281 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "d999b307",
    "metadata": {
     "tags": []
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "809d7da0",
    "metadata": {
     "tags": []
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "27c616fe",
    "metadata": {
     "tags": []
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "041cb2f3",
    "metadata": {
     "tags": []
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "95fc68b8",
    "metadata": {
     "tags": []
@@ -465,7 +465,7 @@
        "Name: race, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "136ddf88",
    "metadata": {
     "tags": []
@@ -496,7 +496,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "6fa4a793",
    "metadata": {
     "tags": []
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "bebd15c0",
    "metadata": {
     "tags": []
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "e5602b09",
    "metadata": {
     "tags": []
@@ -590,7 +590,7 @@
        "                       random_state=42)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "5b1f818a",
    "metadata": {
     "tags": []
@@ -620,10 +620,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x10ee4c9d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x10dcca5d0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "5600dbff",
    "metadata": {
     "tags": []
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "f2c86e63",
    "metadata": {
     "tags": []
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "2f35ff71",
    "metadata": {
     "tags": []
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "3aee344f-326e-43fa-a97b-83fb98b9afee",
    "metadata": {
     "tags": []
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "0761cbd8-febd-4169-a2a4-5db31eea85da",
    "metadata": {
     "tags": []
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "a31ed0e7",
    "metadata": {
     "tags": []
@@ -856,12 +856,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "cf32b9a5",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: array([0, 1, 2], dtype=int64), 3: array([0, 1, 3], dtype=int64), 6: array([0, 4, 5, 6], dtype=int64), 7: array([0, 4, 5, 7], dtype=int64), 8: array([0, 4, 8], dtype=int64)}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -872,7 +879,7 @@
        " 8: \"(adult_test_cat_X['marital-status_Married-civ-spouse']> 0.5 & adult_test_cat_X['education-num']> 12.5  )\"}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,6 +894,7 @@
     "    find_path(0, path_leaf, leaf)\n",
     "    paths[leaf] = np.unique(np.sort(path_leaf))\n",
     "\n",
+    "print(paths)\n",
     "rules = {}\n",
     "for key in paths:\n",
     "    rules[key] = get_rule(\"adult_test_cat_X\", paths[key], column_names)\n",
@@ -896,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "591881c1-815a-499c-bd1e-c7fd6476c1b5",
    "metadata": {
     "tags": []
@@ -910,7 +918,7 @@
        " \"(adult_test_cat_X['marital-status_Married-civ-spouse']> 0.5 & adult_test_cat_X['education-num']> 12.5  )\"]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "f3fc7c6e",
    "metadata": {
     "tags": []
@@ -951,10 +959,10 @@
     {
      "data": {
       "text/plain": [
-       "89.28730902452004"
+       "86.03680039880186"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +995,11 @@
     "        raise KeyError(\"The requested sensitive attribute (s_i) is not in the sensitive dataframe (sens_dataset)\")\n",
     "        \n",
     "    # the answer if no privacy mechanism is applied\n",
-    "    no_mechanism = sens_dataset.loc[dataset[pd.eval(rule, engine='python')].index].value_counts(sort=False)[s_i]\n",
+    "    try:\n",
+    "        no_mechanism = sens_dataset.loc[dataset[pd.eval(rule, engine='python')].index].value_counts(sort=False)[s_i]\n",
+    "        \n",
+    "    except KeyError:\n",
+    "        no_mechanism = 0\n",
     "    \n",
     "    if mechanism == \"laplacian\":\n",
     "        # this is a histogram query so the l1-sensitivity = 1 as per Dwork & Roth \n",
@@ -1022,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "e2ee1554",
    "metadata": {
     "tags": []
@@ -1044,7 +1056,7 @@
     "    for sens_attr in sorted(sens_dataset.unique()):\n",
     "        accept_rates.append(np.sum((sens_dataset == sens_attr) & y_pred) / np.sum(sens_dataset == sens_attr))\n",
     "        \n",
-    "    return accept_rates[0] / accept_rates[1]\n",
+    "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
     "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=False):\n",
@@ -1114,7 +1126,7 @@
     "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]    \n",
     "    \n",
     "    # calculate and return sp\n",
-    "    return (poscounts_per_si[0] / total_per_si[0]) / (poscounts_per_si[1] / total_per_si[1])\n",
+    "    return np.min(poscounts_per_si / total_per_si) / np.max(poscounts_per_si / total_per_si)\n",
     "\n"
    ]
   },
@@ -1128,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "3a26e0b1",
    "metadata": {
     "tags": []
@@ -1171,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "61d990ee-b03c-4102-a6cd-097993951333",
    "metadata": {
     "tags": []
@@ -1180,11 +1192,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.03785978, 0.6717958 , 2.75659591],\n",
-       "       [0.02389216, 4.52617273, 0.03514768]])"
+       "array([[3.95345203e-04, 2.76669102e-01, 1.01106188e+00],\n",
+       "       [5.24607818e-03, 1.25169218e+00, 7.02894426e-02]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,6 +1315,75 @@
     "\n",
     "for arr, name in zip([laplace_errs_hist, exp_errs_hist, laplace_uncert_hist, exp_uncert_hist], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\"]):\n",
     "    with open(f\"adult-race-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a555c1cc-60b6-4d88-9a0e-7837626cb14e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                           | 0/40 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative numbers in total_per_si: [ -12.75178099 3720.89782052 1370.48005254 9039.29801905]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████| 40/40 [21:06:46<00:00, 1900.16s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "epsilons = np.linspace(0.01, 0.5, 40)\n",
+    "runs = 50\n",
+    "\n",
+    "laplace_errs_hist, exp_errs_hist = [], []\n",
+    "laplace_uncert_hist, exp_uncert_hist = [], []\n",
+    "for epsilon in tqdm(epsilons):\n",
+    "    sp_errs = experiment(rules, best_tree, adult_test_cat_X,\n",
+    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "    \n",
+    "    avg_errs = np.mean(sp_errs, axis=0)\n",
+    "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
+    "    uncertainty = std_errs / np.sqrt(runs)\n",
+    "    \n",
+    "    laplace_errs_hist.append(avg_errs[0])\n",
+    "    exp_errs_hist.append(avg_errs[1])\n",
+    "    laplace_uncert_hist.append(uncertainty[0])\n",
+    "    exp_uncert_hist.append(uncertainty[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e077fd19-9143-4e3a-96eb-28971c484149",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "laplace_errs_hist = np.array(laplace_errs_hist)\n",
+    "exp_errs_hist = np.array(exp_errs_hist)\n",
+    "laplace_uncert_hist = np.array(laplace_uncert_hist)\n",
+    "exp_uncert_hist = np.array(exp_uncert_hist)\n",
+    "\n",
+    "for arr, name in zip([laplace_errs_hist, exp_errs_hist, laplace_uncert_hist, exp_uncert_hist], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\"]):\n",
+    "    with open(f\"adult-sex_race-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
