removed histogram and added invalid value policy

--- a/pafer-adult.ipynb
+++ b/pafer-adult.ipynb
@@ -620,7 +620,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x10dcca5d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x116f81dd0>"
       ]
      },
      "execution_count": 13,
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "f3fc7c6e",
    "metadata": {
     "tags": []
@@ -959,10 +959,10 @@
     {
      "data": {
       "text/plain": [
-       "86.03680039880186"
+       "87.93439434689773"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
     "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
-    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=False):\n",
+    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta):\n",
     "    \"\"\"Returns the estimated Statistical Parity of a tree for a privacy mechanism\n",
     "    \n",
     "    Args:\n",
@@ -1085,13 +1085,13 @@
     "    # in this case we select all rows that have a value that is in the set of possible values of the first column\n",
     "    base_rule = f\"({datasetname}[{datasetname}.columns[0]].isin({datasetname}[{datasetname}.columns[0]].unique()))\"\n",
     "    \n",
-    "    if histogram:\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "            \n",
-    "    else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S[:-1]]\n",
-    "        total_per_si.append(len(sens_dataset) - sum(total_per_si))\n",
+    "    # query the size of each sensitive attribute in the dataset\n",
+    "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
+    "        \n",
+    "    # replace each invalid value with balanced totals\n",
+    "    for i, tot in enumerate(total_per_si):\n",
+    "        if tot < 0 or tot > len(sens_dataset):\n",
+    "            total_per_si[i] = (1 / len(S)) * len(sens_dataset)\n",
     "        \n",
     "    total_per_si = np.array(total_per_si)\n",
     "    \n",
@@ -1100,33 +1100,23 @@
     "        rule_counts = np.zeros(len(S))\n",
     "        rule_total = len(sens_dataset[pd.eval(rule)])\n",
     "        \n",
-    "        if histogram:\n",
-    "            for i, s_i in enumerate(S):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "        for i, s_i in enumerate(S):\n",
+    "            # because the queries are disjoint, epsilon remains equal across queries\n",
+    "            answer = round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "\n",
+    "            # if invalid answers from query: replace with balanced node value\n",
+    "            if answer < 0 or answer > len(sens_dataset):\n",
+    "                answer = (1 / len(S)) * rule_total\n",
+    "\n",
+    "            rule_counts[i] += answer\n",
     "        \n",
-    "        else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "            for i, s_i in enumerate(S[:-1]):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
-    "            \n",
-    "            rule_counts[-1] += rule_total - np.sum(rule_counts[:-1])\n",
     "        \n",
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
     "    \n",
-    "    if not np.any(total_per_si[total_per_si != 0]):\n",
-    "        print(f\"Totals for epsilon: {epsilon} has no correct values ({total_per_si})\")\n",
-    "        \n",
-    "    if np.any(total_per_si < 0):\n",
-    "        print(f\"Negative numbers in total_per_si: {total_per_si}\")\n",
-    "        \n",
-    "    # replace the total count with the number of positives (total >= pos) if it is 0\n",
-    "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]    \n",
-    "    \n",
     "    # calculate and return sp\n",
-    "    return np.min(poscounts_per_si / total_per_si) / np.max(poscounts_per_si / total_per_si)\n",
+    "    accept_rates = poscounts_per_si / total_per_si\n",
+    "    return np.min(accept_rates) / np.max(accept_rates)\n",
     "\n"
    ]
   },
@@ -1148,7 +1138,7 @@
    "outputs": [],
    "source": [
     "def experiment(ruleset, tree, dataset, sens_dataset, epsilon, \n",
-    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, histogram=False, combined=False):\n",
+    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, combined=False):\n",
     "    \"\"\"Compares average Statistical Parity Error for different mechanisms\n",
     "    \n",
     "    Args:\n",
@@ -1176,14 +1166,14 @@
     "    \n",
     "    for row in range(runs):\n",
     "        for col, mechanism in enumerate(mechanisms):\n",
-    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=histogram) - actual_sp)\n",
+    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta) - actual_sp)\n",
     "            \n",
     "    return errors\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "61d990ee-b03c-4102-a6cd-097993951333",
    "metadata": {
     "tags": []
@@ -1192,18 +1182,26 @@
     {
      "data": {
       "text/plain": [
-       "array([[3.95345203e-04, 2.76669102e-01, 1.01106188e+00],\n",
-       "       [5.24607818e-03, 1.25169218e+00, 7.02894426e-02]])"
+       "array([[0.0492361 , 0.63874242, 0.35351053],\n",
+       "       [0.43466828, 0.47006644, 0.35351053],\n",
+       "       [0.0841181 , 0.1338432 , 0.35351053],\n",
+       "       [0.29427689, 0.22175769, 0.35351053],\n",
+       "       [0.52305339, 0.15552128, 0.35351053],\n",
+       "       [0.28985102, 0.40322237, 0.35351053],\n",
+       "       [0.43200927, 0.55467591, 0.35351053],\n",
+       "       [0.30582134, 0.51745353, 0.35351053],\n",
+       "       [0.00264176, 0.35378438, 0.35351053],\n",
+       "       [0.26869616, 0.18885641, 0.35351053]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "experiment(rules, best_tree, adult_test_cat_X, adult_test_race, \n",
-    "           epsilon=0.7, delta=0.0001, mechanisms=['laplacian', 'gaussian', 'exponential'], runs=2, histogram=True)"
+    "           epsilon=0.005, delta=0.0001, mechanisms=['laplacian', 'exponential'], runs=10)"
    ]
   },
   {
@@ -1230,7 +1228,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, adult_test_cat_X,\n",
-    "                         adult_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         adult_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1286,7 +1284,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, adult_test_cat_X,\n",
-    "                         adult_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         adult_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1356,7 +1354,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, adult_test_cat_X,\n",
-    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1502,7 +1500,7 @@
     "laplace_uncert_hist_inter, exp_uncert_hist_inter = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree.predict(adult_test_cat_X), adult_test_cat_X,\n",
-    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True, combined=False)\n",
+    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], combined=False)\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1590,7 +1588,7 @@
     "laplace_uncert_combined_inter, exp_uncert_combined_inter = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree.predict(adult_test_cat_X), adult_test_cat_X,\n",
-    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True, combined=True)\n",
+    "                         adult_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], combined=True)\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
