--- a/pafer-compas-other.ipynb
+++ b/pafer-compas-other.ipynb
@@ -586,7 +586,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_29936/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_54170/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  compas_X = compas_X.fillna(compas_X.median())\n"
      ]
     }
@@ -1054,7 +1054,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11988c250>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x141ec1590>"
       ]
      },
      "execution_count": 15,
@@ -1384,7 +1384,7 @@
     {
      "data": {
       "text/plain": [
-       "463.8473320787974"
+       "463.13337346792923"
       ]
      },
      "execution_count": 24,
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "884c3bf6",
    "metadata": {
     "tags": []
@@ -1484,7 +1484,7 @@
     "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
-    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=False):\n",
+    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta):\n",
     "    \"\"\"Returns the estimated Statistical Parity of a tree for a privacy mechanism\n",
     "    \n",
     "    Args:\n",
@@ -1510,13 +1510,13 @@
     "    # in this case we select all rows that have a value that is in the set of possible values of the first column\n",
     "    base_rule = f\"({datasetname}[{datasetname}.columns[0]].isin({datasetname}[{datasetname}.columns[0]].unique()))\"\n",
     "    \n",
-    "    if histogram:\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "            \n",
-    "    else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S[:-1]]\n",
-    "        total_per_si.append(len(sens_dataset) - sum(total_per_si))\n",
+    "    # query the size of each sensitive attribute in the dataset\n",
+    "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
+    "        \n",
+    "    # replace each invalid value with balanced totals\n",
+    "    for i, tot in enumerate(total_per_si):\n",
+    "        if tot < 0 or tot > len(sens_dataset):\n",
+    "            total_per_si[i] = (1 / len(S)) * len(sens_dataset)\n",
     "        \n",
     "    total_per_si = np.array(total_per_si)\n",
     "    \n",
@@ -1525,33 +1525,23 @@
     "        rule_counts = np.zeros(len(S))\n",
     "        rule_total = len(sens_dataset[pd.eval(rule)])\n",
     "        \n",
-    "        if histogram:\n",
-    "            for i, s_i in enumerate(S):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "        for i, s_i in enumerate(S):\n",
+    "            # because the queries are disjoint, epsilon remains equal across queries\n",
+    "            answer = round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "\n",
+    "            # if invalid answers from query: replace with balanced node value\n",
+    "            if answer < 0 or answer > len(sens_dataset):\n",
+    "                answer = (1 / len(S)) * rule_total\n",
+    "\n",
+    "            rule_counts[i] += answer\n",
     "        \n",
-    "        else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "            for i, s_i in enumerate(S[:-1]):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
-    "            \n",
-    "            rule_counts[-1] += rule_total - np.sum(rule_counts[:-1])\n",
     "        \n",
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
     "    \n",
-    "    if not np.any(total_per_si[total_per_si != 0]):\n",
-    "        print(f\"Totals for epsilon: {epsilon} has no correct values ({total_per_si})\")\n",
-    "        \n",
-    "    if np.any(total_per_si < 0):\n",
-    "        print(f\"Negative numbers in total_per_si: {total_per_si}\")\n",
-    "    \n",
-    "    # replace the total count with the number of positives (total >= pos) if it is 0\n",
-    "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]    \n",
-    "        \n",
     "    # calculate and return sp\n",
-    "    return np.min(poscounts_per_si / total_per_si) / np.max(poscounts_per_si / total_per_si)\n"
+    "    accept_rates = poscounts_per_si / total_per_si\n",
+    "    return np.min(accept_rates) / np.max(accept_rates)\n"
    ]
   },
   {
@@ -1564,7 +1554,7 @@
    "outputs": [],
    "source": [
     "def experiment(ruleset, tree, dataset, sens_dataset, epsilon, \n",
-    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, histogram=False, combined=False):\n",
+    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, combined=False):\n",
     "    \"\"\"Compares average Statistical Parity Error for different mechanisms\n",
     "    \n",
     "    Args:\n",
@@ -1592,14 +1582,14 @@
     "    \n",
     "    for row in range(runs):\n",
     "        for col, mechanism in enumerate(mechanisms):\n",
-    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=histogram) - actual_sp)\n",
+    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta) - actual_sp)\n",
     "            \n",
     "    return errors\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "8e60c863",
    "metadata": {
     "tags": []
@@ -1610,20 +1600,25 @@
      "output_type": "stream",
      "text": [
       "0.8451945395176835\n",
-      "0.8319148936170212\n",
-      "Male      3332\n",
-      "Female     782\n",
-      "Name: sex, dtype: int64\n"
+      "0.8319148936170212\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.03164634],\n",
-       "       [0.02317538]])"
+       "array([[0.66988103, 0.54210342],\n",
+       "       [0.66551033, 0.68933854],\n",
+       "       [0.3030522 , 0.68885324],\n",
+       "       [0.68128454, 0.66699895],\n",
+       "       [0.34429957, 0.70919464],\n",
+       "       [0.5741005 , 0.68845506],\n",
+       "       [0.36801346, 0.6852322 ],\n",
+       "       [0.40883267, 0.55490588],\n",
+       "       [0.70644083, 0.55039274],\n",
+       "       [0.14485345, 0.66026149]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,10 +1627,8 @@
     "print(statistical_parity(best_tree.predict(compas_test_cat_X), compas_test_sex))\n",
     "print(statistical_parity(best_tree.predict(compas_train_cat_X), compas_train_sex))\n",
     "\n",
-    "print(compas_train_sex.value_counts())\n",
-    "\n",
-    "experiment(rules, best_tree, compas_test_cat_X, compas_test_race, \n",
-    "           epsilon=0.5, delta=0.0001, mechanisms=['laplacian'], runs=2, histogram=True)"
+    "experiment(rules, best_tree, compas_test_cat_X, compas_test_sex_race, \n",
+    "           epsilon=0.005, delta=0.0001, mechanisms=['exponential', 'laplacian'], runs=10)"
    ]
   },
   {
@@ -1660,7 +1653,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, compas_test_cat_X,\n",
-    "                         compas_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         compas_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1706,7 +1699,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, compas_test_cat_X,\n",
-    "                         compas_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         compas_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -1832,7 +1825,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, compas_test_cat_X,\n",
-    "                         compas_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         compas_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
