--- a/pafer-german.ipynb
+++ b/pafer-german.ipynb
@@ -1171,7 +1171,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11527d650>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x13f799550>"
       ]
      },
      "execution_count": 11,
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "6ade91c8-d3e5-4031-9f8e-1c4fffc7ab5b",
    "metadata": {
     "tags": []
@@ -1464,7 +1464,7 @@
        " \"(german_test_cat_X['Status of existing checking account_A14']> 0.5  )\"]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "483e2be0-af57-4d19-a22f-c15880409ec2",
    "metadata": {
     "tags": []
@@ -1497,10 +1497,10 @@
     {
      "data": {
       "text/plain": [
-       "123.1892190890621"
+       "125.08929259695034"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ad201515-9342-40ee-b135-f8a68af733b9",
    "metadata": {
     "tags": []
@@ -1597,7 +1597,7 @@
     "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
-    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=False):\n",
+    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta):\n",
     "    \"\"\"Returns the estimated Statistical Parity of a tree for a privacy mechanism\n",
     "    \n",
     "    Args:\n",
@@ -1623,13 +1623,13 @@
     "    # in this case we select all rows that have a value that is in the set of possible values of the first column\n",
     "    base_rule = f\"({datasetname}[{datasetname}.columns[0]].isin({datasetname}[{datasetname}.columns[0]].unique()))\"\n",
     "    \n",
-    "    if histogram:\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "            \n",
-    "    else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S[:-1]]\n",
-    "        total_per_si.append(len(sens_dataset) - sum(total_per_si))\n",
+    "    # query the size of each sensitive attribute in the dataset\n",
+    "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
+    "        \n",
+    "    # replace each invalid value with balanced totals\n",
+    "    for i, tot in enumerate(total_per_si):\n",
+    "        if tot < 0 or tot > len(sens_dataset):\n",
+    "            total_per_si[i] = (1 / len(S)) * len(sens_dataset)\n",
     "        \n",
     "    total_per_si = np.array(total_per_si)\n",
     "    \n",
@@ -1638,34 +1638,23 @@
     "        rule_counts = np.zeros(len(S))\n",
     "        rule_total = len(sens_dataset[pd.eval(rule)])\n",
     "        \n",
-    "        if histogram:\n",
-    "            for i, s_i in enumerate(S):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta)\n",
+    "        for i, s_i in enumerate(S):\n",
+    "            # because the queries are disjoint, epsilon remains equal across queries\n",
+    "            answer = round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "\n",
+    "            # if invalid answers from query: replace with balanced node value\n",
+    "            if answer < 0 or answer > len(sens_dataset):\n",
+    "                answer = (1 / len(S)) * rule_total\n",
+    "\n",
+    "            rule_counts[i] += answer\n",
     "        \n",
-    "        else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "            for i, s_i in enumerate(S[:-1]):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
-    "            \n",
-    "            rule_counts[-1] += round(rule_total - np.sum(rule_counts[:-1]))\n",
     "        \n",
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
     "    \n",
-    "    if not np.any(total_per_si[total_per_si != 0]):\n",
-    "        print(f\"Totals for epsilon: {epsilon} has no correct values ({total_per_si})\")\n",
-    "        \n",
-    "    if np.any(total_per_si < 0):\n",
-    "        print(f\"Negative numbers in total_per_si: {total_per_si}\")\n",
-    "        \n",
-    "    # replace the total count with the number of positives (total >= pos) if it is 0\n",
-    "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]\n",
-    "    \n",
-    "    return np.min(poscounts_per_si / total_per_si) / np.max(poscounts_per_si / total_per_si)\n",
-    "\n",
-    "                                                                                                       "
+    "    # calculate and return sp\n",
+    "    accept_rates = poscounts_per_si / total_per_si\n",
+    "    return np.min(accept_rates) / np.max(accept_rates)\n"
    ]
   },
   {
@@ -1678,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "1eebb94c-c4c5-4d06-a94e-bd62ae10d686",
    "metadata": {
     "tags": []
@@ -1686,7 +1675,7 @@
    "outputs": [],
    "source": [
     "def experiment(ruleset, tree, dataset, sens_dataset, epsilon, \n",
-    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, histogram=False, combined=False):\n",
+    "               delta=0.0001, mechanisms=[\"exponential\", \"gaussian\", \"laplacian\"], runs=10, combined=False):\n",
     "    \"\"\"Compares average Statistical Parity Error for different mechanisms\n",
     "    \n",
     "    Args:\n",
@@ -1714,14 +1703,14 @@
     "    \n",
     "    for row in range(runs):\n",
     "        for col, mechanism in enumerate(mechanisms):\n",
-    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta, histogram=histogram) - actual_sp)\n",
+    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta) - actual_sp)\n",
     "            \n",
     "    return errors\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "2fc481fe-fcef-4892-a3f4-31c0db4857f2",
    "metadata": {
     "tags": []
@@ -1739,11 +1728,19 @@
     {
      "data": {
       "text/plain": [
-       "array([[3.15338502],\n",
-       "       [0.05809216]])"
+       "array([[0.67455053, 0.72932647],\n",
+       "       [0.70133735, 0.51540173],\n",
+       "       [0.6553436 , 0.35110749],\n",
+       "       [0.70091471, 0.50514279],\n",
+       "       [0.7639171 , 0.64527288],\n",
+       "       [0.60986505, 0.64247089],\n",
+       "       [0.72380876, 0.64763072],\n",
+       "       [0.72120587, 0.46466252],\n",
+       "       [0.52744062, 0.44704238],\n",
+       "       [0.66109104, 0.70890105]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1749,7 @@
     "print(german_train_sex.value_counts())\n",
     "\n",
     "experiment(rules, best_tree, german_test_cat_X, german_test_sex_race, \n",
-    "           epsilon=0.7, delta=0.0001, mechanisms=['exponential'], runs=2, histogram=True)"
+    "           epsilon=0.005, delta=0.0001, mechanisms=['exponential', 'laplacian'], runs=10)"
    ]
   },
   {
@@ -1883,7 +1880,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
-    "                         german_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         german_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -2776,7 +2773,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
-    "                         german_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         german_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
@@ -4390,7 +4387,7 @@
     "laplace_uncert_hist, exp_uncert_hist = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
     "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
-    "                         german_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"], histogram=True)\n",
+    "                         german_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
