--- a/rsq1-adult.ipynb
+++ b/rsq1-adult.ipynb
@@ -659,7 +659,7 @@
     "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
-    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta=0.001, histogram=False):\n",
+    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta):\n",
     "    \"\"\"Returns the estimated Statistical Parity of a tree for a privacy mechanism\n",
     "    \n",
     "    Args:\n",
@@ -685,13 +685,13 @@
     "    # in this case we select all rows that have a value that is in the set of possible values of the first column\n",
     "    base_rule = f\"({datasetname}[{datasetname}.columns[0]].isin({datasetname}[{datasetname}.columns[0]].unique()))\"\n",
     "    \n",
-    "    if histogram:\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "            \n",
-    "    else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "        total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S[:-1]]\n",
-    "        total_per_si.append(len(sens_dataset) - sum(total_per_si))\n",
+    "    # query the size of each sensitive attribute in the dataset\n",
+    "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
+    "        \n",
+    "    # replace each invalid value with balanced totals\n",
+    "    for i, tot in enumerate(total_per_si):\n",
+    "        if tot < 0 or tot > len(sens_dataset):\n",
+    "            total_per_si[i] = (1 / len(S)) * len(sens_dataset)\n",
     "        \n",
     "    total_per_si = np.array(total_per_si)\n",
     "    \n",
@@ -700,33 +700,23 @@
     "        rule_counts = np.zeros(len(S))\n",
     "        rule_total = len(sens_dataset[pd.eval(rule)])\n",
     "        \n",
-    "        if histogram:\n",
-    "            for i, s_i in enumerate(S):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "        for i, s_i in enumerate(S):\n",
+    "            # because the queries are disjoint, epsilon remains equal across queries\n",
+    "            answer = round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
+    "\n",
+    "            # if invalid answers from query: replace with balanced node value\n",
+    "            if answer < 0 or answer > len(sens_dataset):\n",
+    "                answer = (1 / len(S)) * rule_total\n",
+    "\n",
+    "            rule_counts[i] += answer\n",
     "        \n",
-    "        else:\n",
-    "        # we can calculate the last count ourselves so we iterate one less\n",
-    "            for i, s_i in enumerate(S[:-1]):\n",
-    "                # because the queries are disjoint, epsilon remains equal across queries\n",
-    "                rule_counts[i] += round(oracle(dataset, sens_dataset, rule, s_i, mechanism, 0.5 * epsilon, delta))\n",
-    "            \n",
-    "            rule_counts[-1] += rule_total - np.sum(rule_counts[:-1])\n",
     "        \n",
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
     "    \n",
-    "    if not np.any(total_per_si[total_per_si != 0]):\n",
-    "        print(f\"Totals for epsilon: {epsilon} has no correct values ({total_per_si})\")\n",
-    "        \n",
-    "    if np.any(total_per_si < 0):\n",
-    "        print(f\"Negative numbers in total_per_si: {total_per_si}\")\n",
-    "        \n",
-    "    # replace the total count with the number of positives (total >= pos) if it is 0\n",
-    "    total_per_si = [pos if total == 0 else total for pos, total in zip(poscounts_per_si, total_per_si)]    \n",
-    "    \n",
     "    # calculate and return sp\n",
-    "    return np.min(poscounts_per_si / total_per_si) / np.max(poscounts_per_si / total_per_si)\n"
+    "    accept_rates = poscounts_per_si / total_per_si\n",
+    "    return np.min(accept_rates) / np.max(accept_rates)\n"
    ]
   },
   {
@@ -1554,7 +1544,7 @@
    "outputs": [],
    "source": [
     "def experiment(trainset, sens_trainset, trainsetname, trainset_labels, testset, sens_testset, testsetname, \n",
-    "               testset_labels, epsilon=0.1, minleaf=0.01, runs=5, histogram=True, combined=False):\n",
+    "               testset_labels, epsilon=0.1, minleaf=0.01, runs=5, combined=False):\n",
     "    tree_sps = np.zeros(runs)\n",
     "    estimated_sps = np.zeros(runs)\n",
     "    for i in range(runs):\n",
@@ -1577,11 +1567,9 @@
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
     "        \n",
     "        # apply PAFER\n",
-    "        estimated_sps[i] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon, histogram=True)\n",
+    "        estimated_sps[i] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon)\n",
     "        \n",
-    "    return tree_sps, estimated_sps\n",
-    "        \n",
-    "    "
+    "    return tree_sps, estimated_sps"
    ]
   },
   {
